@@ -2,6 +2,9 @@
 # $Header$
 #
 
+use strict;
+use warnings;
+
 #########################
 # GtkBoxes Tests
 # 	- rm
@@ -24,20 +27,21 @@ else
 
 #########################
 
-ok( $win = Gtk2::Window->new() );
+ok( my $win = Gtk2::Window->new() );
 $win->set_border_width(10);
 
-ok( $vbox = Gtk2::VBox->new(0,5) );
+ok( my $vbox = Gtk2::VBox->new(0,5) );
 $win->add($vbox);
 
+my ($r, $c);
 for( $r = 0; $r < 3; $r++ )
 {
-	ok( $hbox = Gtk2::HBox->new(0, 5), "created hbox for row $r" );
+	ok( my $hbox = Gtk2::HBox->new(0, 5), "created hbox for row $r" );
 	$vbox->pack_start($hbox, 0, 0, 5);
 	$hbox->set_name ("hbox $r");
 	for( $c = 0; $c < 3; $c++ )
 	{
-		ok( $label = Gtk2::Label->new("(r,c):($r,$c)"), 'created label' );
+		ok( my $label = Gtk2::Label->new("(r,c):($r,$c)"), 'created label' );
 		$hbox->pack_start($label, 0, 0, 10);
 
 		# make sure we are where we think we are
@@ -48,7 +52,7 @@ for( $r = 0; $r < 3; $r++ )
 		# appears to be reversed, rather than the objects in
 		# reverse order.  how handy.  that makes the second
 		# one fairly useless, but let's verify that it's there.
-		($path, $htap) = $label->path;
+		my ($path, $htap) = $label->path;
 		ok( defined($htap), 'path returned two items' );
 		ok( $path =~ /hbox $r/, "'hbox $r' is in the path" );
 		##print "path $path\n";
