@@ -2,6 +2,9 @@
 # $Header$
 #
 
+use strict;
+use warnings;
+
 #########################
 # GtkProgressBar Tests
 # 	- rm
@@ -24,18 +27,19 @@ else
 
 #########################
 
-ok( $win = Gtk2::Window->new('toplevel') );
+ok( my $win = Gtk2::Window->new('toplevel') );
 
 $win->set_title('GtkProgressBar.t Test Window');
 
-ok( $vbox = Gtk2::VBox->new( 0, 5 ) );
+ok( my $vbox = Gtk2::VBox->new( 0, 5 ) );
 $win->add($vbox);
 
-@ori = qw/left-to-right right-to-left top-to-bottom bottom-to-top/;
+my @ori = qw/left-to-right right-to-left top-to-bottom bottom-to-top/;
 
+my @prog;
 foreach (@ori)
 {
-	ok( $prog = Gtk2::ProgressBar->new );
+	ok( my $prog = Gtk2::ProgressBar->new );
 	$vbox->pack_start($prog, 0, 0, 0);
 	$prog->set_orientation($_);
 	push @prog, $prog;
