@@ -2,6 +2,9 @@
 # $Header$
 #
 
+use strict;
+use warnings;
+
 #########################
 # GtkDialog Tests
 # 	- rm
@@ -24,16 +27,16 @@ else
 
 #########################
 
-ok( $win = Gtk2::Window->new('toplevel') );
+ok( my $win = Gtk2::Window->new('toplevel') );
 $win->set_title('GtkDialog.t Test Window');
 
 $win->add( Gtk2::Label->new('Main Dialog') );
 
 # a constructor made dialog, run
-ok( $d1 = Gtk2::Dialog->new("Test Dialog", $win,
+ok( my $d1 = Gtk2::Dialog->new("Test Dialog", $win,
 		[qw/destroy-with-parent no-separator/],
 		'gtk-cancel', 2, 'gtk-quit', 3 ) );
-ok( $btn1 = $d1->add_button('Another', 4) );
+ok( my $btn1 = $d1->add_button('Another', 4) );
 ok( $d1->get_has_separator == 0 );
 Glib::Idle->add( sub {
 		$btn1->clicked;
@@ -43,9 +46,9 @@ ok( $d1->run == 4 );
 $d1->hide;
 
 # a hand made dialog, run
-ok( $d2 = Gtk2::Dialog->new );
+ok( my $d2 = Gtk2::Dialog->new );
 ok( $d2->add_button('First Button', 0) );
-ok( $btn2 = $d2->add_button('gtk-ok', 1) );
+ok( my $btn2 = $d2->add_button('gtk-ok', 1) );
 $d2->set_has_separator(1);
 ok( $d2->get_has_separator == 1 );
 $d2->set_has_separator(0);
@@ -63,10 +66,10 @@ ok( $d2->run == 1 );
 $d2->hide;
 
 # a constructor made dialog, show
-ok( $d3 = Gtk2::Dialog->new("Test Dialog", $win,
+ok( my $d3 = Gtk2::Dialog->new("Test Dialog", $win,
 		[qw/destroy-with-parent no-separator/],
 		'gtk-ok', 22, 'gtk-quit', 33 ) );
-ok( $btn3 = $d3->add_button('Another', 44) );
+ok( my $btn3 = $d3->add_button('Another', 44) );
 ok( $d3->get_has_separator == 0 );
 $d3->vbox->pack_start( Gtk2::Label->new('This is just a test.'), 0, 0, 0);
 $d3->action_area->pack_start( Gtk2::Label->new('<- Actions'), 0, 0, 0);
